...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_username_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="24dp"
        android:text="Register"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:helperText="@string/confirm_password_requirements"
        app:hintTextColor="@color/dark_gold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_confirmPassword_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

...
        app:helperText="@string/password_requirements"
        app:hintTextColor="@color/dark_gold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_password_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

...
        app:helperText="@string/email_requirements"
        app:hintTextColor="@color/dark_gold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_email_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

...
